# old-3d-reconstruction-code

./: CMakeLists.txt  README
cmake/: FindEigen3.cmake
doc/: Doxyfile
include/Core/: Event.h  Fact.h  Object.h  ObjectData.h  OpenCVGPUManager.h
include/Math/: Matrix.h
include/Vision/Core/: CameraParameters.h  Feature.h  FeatureSet.h  ICamera.h  IImage.h  Point.h  PointCloud.h  PointOfView.h  Scene.h  SingleViewCamera.h  SingleViewImage.h  VisualData.h
include/Vision/Input/: CameraInputSource.h
include/Vision/Recognition/: IObjectDetector.h  ShapeBasedObjectDetector.h  StaticObjectDetector.h
include/Vision/Reconstruction/: AbstractDenseMatcher.h  AbstractFeatureMatcher.h  BundleAdjuster.h  CameraCalibrator.h  DenseMatcher.h  GFTTFeatureMatcher.h  IImageMatcher.h  SURFGPUFeatureMatcher.h  SceneReconstructor.h
include/Vision/Tracking/: AbstractProbabilisticObjectTracker.h  IObjectTracker.h
lib/: CMakeLists.txt
lib/Audio/: CMakeLists.txt
lib/Core/: CMakeLists.txt  Data.cpp  Data.h  Event.cpp  Fact.cpp  Object.cpp  Object.h  ObjectData.cpp
lib/Framework/: CMakeLists.txt
lib/Language/: CMakeLists.txt  Context.cpp  Context.h  Expression.cpp  Expression.h
lib/Math/: CMakeLists.txt  Matrix.cpp
lib/Math/Calculus/: Antiderivative.cpp  Antiderivative.h  CMakeLists.txt  Derivative.cpp  Derivative.h  IFunction.cpp  IFunction.h  Integral.cpp  Integral.h  Jacobian.cpp  Jacobian.h  PartialDerivative.cpp  PartialDerivative.h
lib/Math/Core/: CMakeLists.txt  Number.h
lib/Math/LinearAlgebra/: CMakeLists.txt  Field.h  Matrix.cpp  Matrix.h  QRDecomposition.cpp  QRDecomposition.h  Vector.h  VectorSpace.cpp  VectorSpace.h
lib/Math/Optimization/: CMakeLists.txt  LevenbergMarquardt.cpp  LevenbergMarquardt.h
lib/Math/Statistics/: CMakeLists.txt  RANSAC.cpp  RANSAC.h
lib/Vision/: CMakeLists.txt
lib/Vision/Core/: CMakeLists.txt  CameraParameters.cpp  CameraParameters.h  Feature.cpp  Feature.h  FeatureSet.cpp  FeatureSet.h  ICamera.cpp  ICamera.h  IImage.cpp  IImage.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PointOfView.cpp  PointOfView.h  Projection.cpp  Projection.h  Scene.cpp  Scene.h  SingleViewCamera.cpp  SingleViewCamera.h  SingleViewImage.cpp  SingleViewImage.h  VisualData.cpp  VisualData.h
lib/Vision/Input/: CMakeLists.txt  CameraInputSource.cpp  IInputSource.cpp  IInputSource.h  ImageListInputSource.cpp  ImageListInputSource.h
lib/Vision/Recognition/: CMakeLists.txt  CompositeObjectDetector.cpp  CompositeObjectDetector.h  IObjectDetector.cpp  IObjectDetector.h  MovingObjectDetector.cpp  MovingObjectDetector.h  ShapeBasedObjectDetector.cpp  ShapeBasedObjectDetector.h  StaticObjectDetector.cpp  StaticObjectDetector.h
lib/Vision/Reconstruction/: AbstractDenseMatcher.cpp  AbstractDenseMatcher.h  AbstractFeatureMatcher.cpp  AbstractFeatureMatcher.h  BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  DenseMatcher.cpp  FASTFeatureMatcher.cpp  FASTFeatureMatcher.h  GFTTFeatureMatcher.cpp  GFTTFeatureMatcher.h  IImageMatcher.cpp  IImageMatcher.h  PoseEstimator.cpp  PoseEstimator.h  SIFTFeatureMatcher.cpp  SIFTGPUFeatureMatcher.cpp  SURFFLANNFeatureMatcher.cpp  SURFGPUFeatureMatcher.cpp  SURFGPUFeatureMatcher.h  SceneReconstructor.cpp  SceneReconstructor.h
lib/Vision/Tracking/: AbstractProbabilisticObjectTracker.cpp  CMakeLists.txt  IObjectTracker.cpp
src/: CMakeLists.txt  CVImageWidget.cpp  CVImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
test/Math/: CMakeLists.txt
test/Math/Calculus/: CMakeLists.txt  DerivativeTest.cpp  DerivativeTest.h  IntegralTest.cpp  IntegralTest.h
test/Math/Core/: CMakeLists.txt  NumberOperationsTest.cpp  NumberOperationsTest.h
